--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,5 @@
 [package]
 name = "raesan-registry"
-version = "0.0.1"
 edition = "2021"
 
 [lib]
@@ -25,7 +24,10 @@ bon = "3.5"
 hotwatch = "0.5.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-thiserror = "2"
 uuid = { version = "1.16.0", features = ["v4"] }
 walkdir = "2"
 rust-embed = "8.6.0"
+thiserror = "2"
+color-eyre = "0.6"
+tracing = "0.1"
+tracing-subscriber = "0.2.0"
